--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </nav>
         </div>
     </header> 
-    <section class="hero">
+    <!-- <section class="hero">
         <div class="hero_container">
             
             <h2>Nuestra propuesta</h2>
@@ -80,6 +80,6 @@
             <img src="./img/rotulos.png" alt="Rotulos" class="imagen_servicios">
             <h2>Mantenimiento de Rótulos</h2>
         </div>
-    </section>
+    </section> -->
 </body>
 </html>
