--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </nav>
         </div>
     </header> 
-    <!-- <section class="hero">
+    <section class="hero">
         <div class="hero_container">
             
             <h2>Nuestra propuesta</h2>
@@ -44,7 +44,7 @@
         </div>
     </section>
     
-    <section class="Instalaciones_Electricas">
+    <!-- <section class="Instalaciones_Electricas">
         <div class="img_instaciones">
             <img src="./img/Electrica.png" alt="Electricos" class="instalaciones">
         </div>
