--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         </ul>
     </nav>
 
-    <main>
-        <h1>Welcome to our website</h1>
-        <p>This is a sample content area.</p>
+    <main class="hero">
+        <div class="hero-content">
+            <h1>Welcome to our website</h1>
+            <p>Discover amazing experiences with us</p>
+            <a href="#" class="cta-button">Get Started</a>
+        </div>
     </main>
 </body>
 </html>
