Services section corrected

--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@
         <div class="carousel-container">
             <div class="card">
                 <img src="./img/Electrica.png" alt="Card 1 Thumbnail" class="card-thumbnail">
-                <h2 class="card-title">Card 1 Title</h2>
-                <p class="card-description">Short description for Card 1. This is a brief overview of the content.</p>
+                <h2 class="card-title">Instalaciones Eléctricas</h2>
+                <p class="card-description">Instalaciones.</p>
                 <a href="#" class="card-cta">Learn More</a>
             </div>
             <div class="card">
                 <img src="./img/Electricos.png" alt="Card 2 Thumbnail" class="card-thumbnail">
-                <h2 class="card-title">Card 2 Title</h2>
-                <p class="card-description">Short description for Card 2. This is a brief overview of the content.</p>
+                <h2 class="card-title">Electricos</h2>
+                <p class="card-description">Servicios de electricidad.</p>
                 <a href="#" class="card-cta">Learn More</a>
             </div>
             <div class="card">
                 <img src="./img/Cableado.png" alt="Card 3 Thumbnail" class="card-thumbnail">
-                <h2 class="card-title">Card 3 Title</h2>
-                <p class="card-description">Short description for Card 3. This is a brief overview of the content.</p>
+                <h2 class="card-title">Cableado Estructurado</h2>
+                <p class="card-description">Cableados Estructurados.</p>
                 <a href="#" class="card-cta">Learn More</a>
             </div>
             <div class="card">
                 <img src="./img/telefonia.png" alt="Card 1 Thumbnail" class="card-thumbnail">
-                <h2 class="card-title">Card 1 Title</h2>
-                <p class="card-description">Short description for Card 1. This is a brief overview of the content.</p>
+                <h2 class="card-title">Servicios de telefonia</h2>
+                <p class="card-description">telefonia.</p>
                 <a href="#" class="card-cta">Learn More</a>
             </div>
             <div class="card">
-                <img src="./img/electricidad.jpg" alt="Card 2 Thumbnail" class="card-thumbnail">
-                <h2 class="card-title">Card 2 Title</h2>
-                <p class="card-description">Short description for Card 2. This is a brief overview of the content.</p>
+                <img src="./img/cercas.jpg" alt="Card 2 Thumbnail" class="card-thumbnail">
+                <h2 class="card-title">Cercas Electricas</h2>
+                <p class="card-description">Instalación de cercas Electricas.</p>
                 <a href="#" class="card-cta">Learn More</a>
             </div>
            
