--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="autor" content="Ucreativa, Gabriel Jiménez Araya" > 
+    <meta name="owner" content="Sett">
+    <meta name="description" content="Web de servicios electricos..."> <!-- 150 caracteres -->
+    <meta name="keywords" content="Electricidad, servicios, telefonia, televisión"> <!--20 palabras  -->
+    <meta name="og:title" content="web business">
+    <meta name="language" content="spanish">
+    <meta name="distribution" content="global">
+    <meta name="robots" content="index, follow">
     <title>Responsive Navigation with Logo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,10 +23,10 @@
             <span></span>
         </label>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="#">Galeria</a></li>
+            <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
 
