--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="language" content="spanish">
     <meta name="distribution" content="global">
     <meta name="robots" content="index, follow">
-    <title>Responsive Navigation with Logo</title>
+    <title>Pagina de SETT</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
