changes in the hero

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="language" content="spanish">
     <meta name="distribution" content="global">
     <meta name="robots" content="index, follow">
-    <title>Pagina de SETT</title>
+    <title>Página de SETT</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -32,9 +32,9 @@
 
     <main class="hero">
         <div class="hero-content">
-            <h1>Welcome to our website</h1>
-            <p>Discover amazing experiences with us</p>
-            <a href="#" class="cta-button">Get Started</a>
+            <h1>Bienvenido a SETT</h1>
+            <p>Servicios Electricos y Telefonia</p>
+            <a href="#" class="cta-button">Contactanos</a>
         </div>
     </main>
     
