--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </label>
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Nosotros</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="#">Galeria</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
