--- a/galeria.html
+++ b/galeria.html
@@ -12,9 +12,27 @@
     <meta name="distribution" content="global">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="galeria.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Galeria</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="galeria.html">Gallery</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="gallery-container">
         <h2 class="gallery-title">What do we do?</h2>
         <div class="gallery">
@@ -22,7 +40,7 @@
                 <img src="img/camaras.jpg" alt="Service 1">
             </div>
             <div class="gallery-item">
-                <img src="img/cercas electricas.jpg" alt="Service 2">
+                <img src="img/cercas_electricas.jpg" alt="Service 2">
             </div>
             <div class="gallery-item">
                 <img src="img/paneles.jpg" alt="Service 3">
@@ -39,5 +57,24 @@
         </div>
     </div>
     
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Email: jimenezcordero@gmail.com</p>
+                <p>Phone: +506 61628540</p>
+            </div>
+            <div class="footer-section">
+                <h3>Follow Us</h3>
+                <a href="#" class="social-icon"><img src="iconos/facebook-logo-24.png" alt="Facebook"></a>
+                <a href="#" class="social-icon"><img src="iconos/whatsapp-logo-24.png" alt="WhatsApp"></a>
+            </div>
+        
+        <div class="footer-bottom">
+            <p>&copy; 2023 Your Company Name. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
