--- a/galeria.html
+++ b/galeria.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="autor" content="Ucreativa, Gabriel Jiménez Araya" > 
     <meta name="owner" content="Sett">
     <meta name="description" content="Web de servicios electricos..."> <!-- 150 caracteres -->
@@ -11,8 +12,7 @@
     <meta name="language" content="spanish">
     <meta name="distribution" content="global">
     <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="galeria.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/galeria.css">
     <title>Galeria</title>
 </head>
 <body>
@@ -25,10 +25,10 @@
                 <span></span>
             </label>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="galeria.html">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contacto.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -69,12 +69,10 @@
                 <a href="#" class="social-icon"><img src="iconos/facebook-logo-24.png" alt="Facebook"></a>
                 <a href="#" class="social-icon"><img src="iconos/whatsapp-logo-24.png" alt="WhatsApp"></a>
             </div>
-        
+        </div>
         <div class="footer-bottom">
             <p>&copy; 2023 Your Company Name. All rights reserved.</p>
         </div>
     </footer>
-
-    
 </body>
 </html>
