--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="autor" content="Ucreativa, Gabriel Jiménez Araya" > 
     <meta name="owner" content="Sett">
     <meta name="description" content="Web de servicios electricos..."> <!-- 150 caracteres -->
@@ -13,7 +13,7 @@
     <meta name="distribution" content="global">
     <meta name="robots" content="index, follow">
     <title>Página de SETT</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <nav>
@@ -25,8 +25,8 @@
         <ul>
             <li><a href="#">Inicio</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="#">Galeria</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
@@ -90,7 +90,10 @@
             <p class="privacy-policy">
                 <a href="https://terminosya.com/generador-politica-de-privacidad?gclid=CjwKCAjwhdWkBhBZEiwA1ibLmIPYxH1MVgPemzc5aPTil3qRbpDKbSJtRuKkX6Uk0E_ashE3c5UqPhoCUJsQAvD_BwE" target="_blank">Privacy Policy | Terms of Use</a>
             </p>
+            <a href="#" class="logo"><img src="./img/Logo.jpg" alt="Logo"></a>
+            <p>Dirección: San Rafael de Poas Alajuela</p>
         </div>
+
     </footer>
 </body>
 </html>
