--- a/nosotros.html
+++ b/nosotros.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="autor" content="Ucreativa, Gabriel Jiménez Araya" > 
     <meta name="owner" content="Sett">
     <meta name="description" content="Web de servicios electricos..."> <!-- 150 caracteres -->
@@ -11,7 +12,7 @@
     <meta name="language" content="spanish">
     <meta name="distribution" content="global">
     <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="nosotros.css">
+    <link rel="stylesheet" href="css/nosotros.css">
     <title>Nosotros</title>
 </head>
 <body>
@@ -22,8 +23,8 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="#">Galeria</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="galeria.html">Galeria</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
